force-app/main/default/objects/Case_AI_Log__c/Case_AI_Log__c.object-meta.xml
<CustomObject>
    <description>Used to capture the log-files of the Case Ai Analysis</description>
    <label>Case AI Log</label>
    <nameField>
        <displayFormat>LOG-{0000}</displayFormat>
        <label>Case AI Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Ai Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>