force-app/main/default/objects/Case_AI_Log__c/fields/Applied__c.field-meta.xml
<CustomField>
    <fullName>Applied__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To indicate whether the suggestions of the Ai were applied or not</description>
    <label>Applied</label>
    <type>Checkbox</type>
</CustomField>