force-app/main/default/objects/Case_AI_Log__c/fields/Reasoning__c.field-meta.xml
<CustomField>
    <fullName>Reasoning__c</fullName>
    <description>To capture the reasoning of the AI</description>
    <label>Reasoning</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>