force-app/main/default/objects/Case_AI_Log__c/fields/Sentiment__c.field-meta.xml
<CustomField>
    <fullName>Sentiment__c</fullName>
    <description>Capturing the sentiment analysed by the AI</description>
    <label>Sentiment</label>
    <length>50</length>
    <type>Text</type>
</CustomField>