force-app/main/default/objects/Case_AI_Log__c/fields/Suggested_Priority__c.field-meta.xml
<CustomField>
    <fullName>Suggested_Priority__c</fullName>
    <description>Field to capture the suggested priority of the ai</description>
    <label>Suggested Priority</label>
    <length>255</length>
    <type>Text</type>
</CustomField>