force-app/main/default/objects/Case_AI_Log__c/fields/Suggested_Subtype__c.field-meta.xml
<CustomField>
    <fullName>Suggested_Subtype__c</fullName>
    <description>field to capture the suggested subtype of the ai</description>
    <label>Suggested Subtype</label>
    <length>255</length>
    <type>Text</type>
</CustomField>