force-app/main/default/objects/Case_AI_Log__c/fields/Suggested_Type__c.field-meta.xml
<CustomField>
    <fullName>Suggested_Type__c</fullName>
    <description>For the suggest Type-value</description>
    <label>Suggested Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>